--- a/app/src/main/res-screen/main/layout/explore_set_view_list_item.xml
+++ b/app/src/main/res-screen/main/layout/explore_set_view_list_item.xml
@@ -2,14 +2,36 @@
 <android.support.v7.widget.CardView
     android:id="@+id/main_explore_set_list_item_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="270dp"
+    android:layout_height="152dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="10dp"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="6dp">
 
     <ImageView
         android:id="@+id/main_explore_set_list_item_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"/>
+        android:scaleType="fitXY"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_gravity="bottom"
+        android:background="@drawable/explore_set_image_foreground_gradient"/>
+
+    <TextView
+        android:id="@+id/main_explore_set_list_item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:textColor="@color/colorTextPrimary"
+        android:textSize="10sp"
+        android:paddingBottom="5dp"/>
 
 </android.support.v7.widget.CardView>
