--- a/app/src/main/res-screen/main/layout/explore_set_view.xml
+++ b/app/src/main/res-screen/main/layout/explore_set_view.xml
@@ -28,6 +28,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="30dp"
             android:layout_marginStart="30dp"
+            android:text="@string/expore_set_view_default_title"
             android:textSize="20sp"
             android:textColor="@color/colorTextPrimary"/>
 
