--- a/app/src/main/res-screen/main/layout/content_main.xml
+++ b/app/src/main/res-screen/main/layout/content_main.xml
@@ -14,12 +14,23 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/main_explore_sets_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/main_showcase_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
+            <LinearLayout
+                android:id="@+id/main_explore_sets_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
