--- a/app/src/main/res-screen/main/layout/showcase_list_item.xml
+++ b/app/src/main/res-screen/main/layout/showcase_list_item.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout
     android:id="@+id/main_showcase_list_item_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="0dp"
+    app:ratio="1.776"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/main_showcase_list_item_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/main_showcase_list_item_text"
@@ -17,4 +20,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"/>
 
-</FrameLayout>
+</com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout>
