--- a/app/src/main/res-screen/main/layout/showcase_list_item.xml
+++ b/app/src/main/res-screen/main/layout/showcase_list_item.xml
@@ -14,10 +14,19 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+    <com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:ratio="4"
+        android:background="@drawable/foreground_gradient"
+        android:layout_gravity="bottom"/>
+
     <TextView
         android:id="@+id/main_showcase_list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"/>
+        android:layout_gravity="center_horizontal|bottom"
+        android:textColor="@color/colorTextPrimary"
+        android:textSize="20sp"/>
 
 </com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout>
