--- a/app/src/main/res-screen/main/layout/content_main.xml
+++ b/app/src/main/res-screen/main/layout/content_main.xml
@@ -23,6 +23,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/colorPrimary"/>
+
             <LinearLayout
                 android:id="@+id/main_explore_sets_container"
                 android:layout_width="match_parent"
