добавил showcaseView вместо обычного RecyclerView

--- a/app/src/main/res-screen/main/layout/content_main.xml
+++ b/app/src/main/res-screen/main/layout/content_main.xml
@@ -18,8 +18,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/main_showcase_list"
+            <com.soutvoid.gamesproject.ui.screen.main.widgets.showcase.widget.ShowcaseView
+                android:id="@+id/main_showcase_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
