--- a/app/src/main/res-screen/main/layout/showcase_list_item.xml
+++ b/app/src/main/res-screen/main/layout/showcase_list_item.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout
+<FrameLayout
     android:id="@+id/main_showcase_list_item_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    app:ratio="1.776"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/main_showcase_list_item_image"
@@ -29,4 +27,4 @@
         android:textColor="@color/colorTextPrimary"
         android:textSize="20sp"/>
 
-</com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout>
+</FrameLayout>
