--- a/app/src/main/res-screen/main/layout/showcase_view.xml
+++ b/app/src/main/res-screen/main/layout/showcase_view.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout
     android:id="@+id/main_showcase_view_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="0dp"
+    app:ratio="1.776">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/main_showcase_view_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
-</FrameLayout>
+    <View
+        android:id="@+id/main_showcase_view_left_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_navigation_arrow_left_white_24dp"
+        android:layout_gravity="center_vertical|left"/>
+
+    <View
+        android:id="@+id/main_showcase_view_right_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_navigation_arrow_right_white_24dp"
+        android:layout_gravity="center_vertical|right"/>
+
+</com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout>
