--- a/app/src/main/res-screen/main/layout/showcase_list_item.xml
+++ b/app/src/main/res-screen/main/layout/showcase_list_item.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="@color/colorTextPrimary"
-        android:textSize="20sp"/>
+        android:textSize="25sp"
+        android:gravity="center_horizontal"/>
 
 </FrameLayout>
