--- a/app/src/main/res-screen/main/layout/showcase_view.xml
+++ b/app/src/main/res-screen/main/layout/showcase_view.xml
@@ -7,7 +7,7 @@
     android:layout_height="0dp"
     app:ratio="1.776">
 
-    <android.support.v7.widget.RecyclerView
+    <com.soutvoid.gamesproject.ui.base.widgets.AutoScrollingRecyclerView
         android:id="@+id/main_showcase_view_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
