--- a/app/src/main/res-screen/main/layout/content_main.xml
+++ b/app/src/main/res-screen/main/layout/content_main.xml
@@ -41,4 +41,10 @@
 
     </ScrollView>
 
+    <com.soutvoid.gamesproject.ui.base.widgets.PlaceholderView
+        android:id="@+id/main_placeholder_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
 </RelativeLayout>
