--- a/app/src/main/res-screen/main/layout/content_main.xml
+++ b/app/src/main/res-screen/main/layout/content_main.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"/>
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/main_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@color/colorBackground"/>
