--- a/app/src/main/res-screen/personalize/layout/activity_personalize.xml
+++ b/app/src/main/res-screen/personalize/layout/activity_personalize.xml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:orientation="vertical"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/personalize_toolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/personalize_explore_list"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personalize_toolbar"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/personalize_toolbar"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/personalize_fab"
@@ -34,8 +21,17 @@
         android:clickable="true"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         app:rippleColor="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/ic_add_white_24dp"/>
-</android.support.constraint.ConstraintLayout>
+        app:srcCompat="@drawable/ic_add_white_24dp"
+        android:layout_marginEnd="24dp"/>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/personalize_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="?attr/actionBarTheme"/>
+</RelativeLayout>
