--- a/app/src/main/res-screen/personalize/layout/personalize_explore_list_item.xml
+++ b/app/src/main/res-screen/personalize/layout/personalize_explore_list_item.xml
@@ -3,7 +3,7 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:orientation="vertical"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/personalize_explore_list_container"
@@ -28,12 +28,6 @@
             android:id="@+id/personalize_explore_list_tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"/>
 
         </com.google.android.flexbox.FlexboxLayout>
 
