--- a/app/src/main/res-screen/main/layout/activity_main.xml
+++ b/app/src/main/res-screen/main/layout/activity_main.xml
@@ -10,46 +10,31 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        >
+        android:fillViewport="true">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:clipChildren="true"
             android:orientation="vertical">
 
             <com.soutvoid.gamesproject.ui.screen.main.widgets.showcase.widget.ShowcaseView
                 android:id="@+id/main_showcase_view"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/main_toolbar"
-                android:layout_width="0dp"
-                android:layout_height="56dp"
-                android:background="@color/colorBackground"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/main_showcase_view"/>
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:background="@color/colorBackground"/>
 
             <LinearLayout
                 android:id="@+id/main_explore_sets_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toTopOf="@+id/main_personalize_btn"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintVertical_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
 
             </LinearLayout>
@@ -57,18 +42,13 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/main_personalize_btn"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
                 android:background="@color/personalize_btn_color"
                 android:text="@string/personalize"
-                android:textColor="@color/colorAccent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                android:textColor="@color/colorAccent"/>
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
     </ScrollView>
 
