--- a/app/src/main/res-screen/personalize/layout/activity_personalize.xml
+++ b/app/src/main/res-screen/personalize/layout/activity_personalize.xml
@@ -9,7 +9,7 @@
         android:id="@+id/personalize_explore_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/personalize_toolbar"/>
+        android:layout_below="@+id/personalize_toolbar_container"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/personalize_fab"
@@ -28,10 +28,8 @@
         app:srcCompat="@drawable/ic_add_white_24dp"
         android:layout_marginEnd="24dp"/>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/personalize_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="?attr/actionBarTheme"/>
+    <include
+        android:id="@+id/personalize_toolbar_container"
+        layout="@layout/toolbar_search_shadow"/>
+
 </RelativeLayout>
