--- a/app/src/main/res-screen/queryEdit/layout/activity_query_edit.xml
+++ b/app/src/main/res-screen/queryEdit/layout/activity_query_edit.xml
@@ -5,34 +5,6 @@
                                              android:layout_height="match_parent"
                                              android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/query_edit_toolbar"
-        android:layout_width="0dp"
-        android:layout_height="?actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:ratio="1">
-
-            <Button
-                style="@style/Widget.AppCompat.ImageButton"
-                android:background="@drawable/ic_check_white_24dp"
-                android:id="@+id/query_edit_save"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="13dp"/>
-
-        </com.soutvoid.gamesproject.ui.base.widgets.FixedAspectRatioFrameLayout>
-
-    </android.support.v7.widget.Toolbar>
-
     <android.support.design.widget.TextInputLayout
         android:id="@+id/query_edit_name_text_input"
         android:layout_width="match_parent"
@@ -42,7 +14,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/query_edit_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/query_edit_toolbar_container">
 
         <EditText
             android:id="@+id/query_edit_name_edt"
@@ -51,5 +23,9 @@
             android:layout_height="wrap_content"
             android:hint="hint"/>
     </android.support.design.widget.TextInputLayout>
+
+    <include
+        android:id="@+id/query_edit_toolbar_container"
+        layout="@layout/toolbar_search_save_shadow"/>
 
 </android.support.constraint.ConstraintLayout>
