--- a/app/src/main/res-main/layout/toolbar_expanded_edt_save.xml
+++ b/app/src/main/res-main/layout/toolbar_expanded_edt_save.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <com.soutvoid.gamesproject.ui.base.widgets.IgdbToolbar
-
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_height="110dp"
+        android:gravity="bottom|left"
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true">
 
@@ -31,21 +32,21 @@
             android:id="@+id/toolbar_input_edt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="55dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginBottom="10dp"
             android:inputType="text"
+            android:textColor="@color/colorTextPrimary"
             android:hint="@string/enter_name"
             android:textColorHint="@color/white_transparent_40"
             android:textCursorDrawable="@null"
             android:theme="@style/NoUnderline"/>
 
         <Button
-            android:id="@+id/toolbar_lists_btn"
+            android:id="@+id/toolbar_save_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="right"
+            android:layout_gravity="right|top"
             android:layout_margin="15dp"
-            android:background="@drawable/ic_play_list_dark"/>
+            android:background="@drawable/ic_check_white_24dp"/>
 
     </com.soutvoid.gamesproject.ui.base.widgets.IgdbToolbar>
 
