--- a/app/src/main/res-main/layout/toolbar_search_shadow.xml
+++ b/app/src/main/res-main/layout/toolbar_search_shadow.xml
@@ -27,6 +27,18 @@
             android:textCursorDrawable="@null"
             android:theme="@style/GrayUnderline"/>
 
+        <EditText
+            android:id="@+id/toolbar_input_edt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="55dp"
+            android:layout_marginLeft="25dp"
+            android:inputType="text"
+            android:hint="@string/enter_name"
+            android:textColorHint="@color/white_transparent_40"
+            android:textCursorDrawable="@null"
+            android:theme="@style/NoUnderline"/>
+
     </com.soutvoid.gamesproject.ui.base.widgets.IgdbToolbar>
 
     <View
