--- a/app/src/main/res-screen/queryEdit/layout/activity_query_edit.xml
+++ b/app/src/main/res-screen/queryEdit/layout/activity_query_edit.xml
@@ -1,31 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:orientation="vertical">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/query_edit_name_text_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/query_edit_toolbar_container">
-
-        <EditText
-            android:id="@+id/query_edit_name_edt"
-            style="@style/Widget.AppCompat.EditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="hint"/>
-    </android.support.design.widget.TextInputLayout>
 
     <include
         android:id="@+id/query_edit_toolbar_container"
-        layout="@layout/toolbar_search_save_shadow"/>
+        layout="@layout/toolbar_expanded_edt_save"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
