--- a/app/src/main/res-screen/queryEdit/layout/activity_query_edit.xml
+++ b/app/src/main/res-screen/queryEdit/layout/activity_query_edit.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/query_edit_toolbar_container"
         layout="@layout/toolbar_expanded_edt_save"/>
 
-</RelativeLayout>
+    <include layout="@layout/section_released"/>
+
+</LinearLayout>
