--- a/app/src/main/res-screen/queryEdit/layout/section_released.xml
+++ b/app/src/main/res-screen/queryEdit/layout/section_released.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="20dp">
 
     <ImageView
@@ -25,7 +25,7 @@
         android:textColor="@color/colorTextInverse"
         android:textSize="17sp"/>
 
-    <TextView
+    <com.soutvoid.gamesproject.ui.screen.queryEdit.widgets.choosableDate.ChoosableDateTextView
         android:id="@+id/section_released_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         android:text="@string/and"
         android:textColor="@color/colorTextInverse"/>
 
-    <TextView
+    <com.soutvoid.gamesproject.ui.screen.queryEdit.widgets.choosableDate.ChoosableDateTextView
         android:id="@+id/section_released_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
