добавил кнопки для жанров

--- a/app/src/main/res-screen/queryEdit/layout/section_genres.xml
+++ b/app/src/main/res-screen/queryEdit/layout/section_genres.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp">
@@ -30,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/main_explore_set_header"/>
+        android:layout_below="@id/section_genres_header"
+        android:layout_alignLeft="@id/section_genres_header"
+        app:flexWrap="wrap"/>
 
 </RelativeLayout>
