--- a/app/src/main/res-screen/game/layout/activity_game.xml
+++ b/app/src/main/res-screen/game/layout/activity_game.xml
@@ -7,8 +7,10 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/game_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_anchorGravity="bottom">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -21,17 +23,60 @@
                 android:layout_height="wrap_content"
                 app:layout_collapseMode="parallax"/>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
+        <FrameLayout
+            android:id="@+id/game_app_bar_title_placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/colorBackground"
+            android:layout_gravity="bottom|center_horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="20dp">
+
+                <TextView
+                    android:id="@+id/game_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="sdgfdg"
+                    android:textSize="20sp"/>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_anchor="@id/game_app_bar"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="123456789"/>
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <ImageView
+        android:id="@+id/game_cover"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        app:layout_behavior="com.soutvoid.gamesproject.ui.screen.game.behaviors.FadingViewBehavior"
+        app:layout_anchor="@id/game_app_bar_title_placeholder"
+        app:startY="10dp"
+        app:endY="20dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
