--- a/app/src/main/res-screen/game/layout/activity_game.xml
+++ b/app/src/main/res-screen/game/layout/activity_game.xml
@@ -52,32 +52,6 @@
                 android:textColor="@color/colorTextInverse"
                 android:textSize="25sp"/>
 
-            <TextView
-                android:id="@+id/game_year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/game_title"
-                android:layout_below="@id/game_title"
-                android:layout_marginTop="5dp"/>
-
-            <View
-                android:id="@+id/game_year_status_separator"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:background="@drawable/circle"
-                android:layout_below="@id/game_title"
-                android:layout_toRightOf="@id/game_year"
-                android:layout_marginTop="12dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"/>
-
-            <TextView
-                android:id="@+id/game_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/game_year"
-                android:layout_toRightOf="@id/game_year_status_separator"/>
-
 
         </RelativeLayout>
 
@@ -107,5 +81,38 @@
         app:layout_anchor="@id/game_app_bar_title_placeholder"
         app:layout_behavior="com.soutvoid.gamesproject.ui.screen.game.behaviors.FadingViewBehavior"
         app:startY="10dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_anchor="@id/game_title"
+        app:layout_anchorGravity="bottom"
+        app:layout_behavior="com.soutvoid.gamesproject.ui.screen.game.behaviors.FadingViewBehavior"
+        app:endY="40dp"
+        app:startY="10dp"
+        android:layout_marginLeft="140dp"
+        android:paddingTop="20dp">
+
+        <TextView
+            android:id="@+id/game_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <View
+            android:id="@+id/game_year_status_separator"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:background="@drawable/circle"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"/>
+
+        <TextView
+            android:id="@+id/game_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
